--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -15,6 +15,8 @@ on:
         required: true
       AWS_ROLE:
         required: true
+      AWS_ACCOUNT_ID:
+        required: true
 
 permissions:
   id-token: write
@@ -35,6 +37,8 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 5
 
       - name: Configure AWS credentials from AWS account
         uses: aws-actions/configure-aws-credentials@v1
@@ -79,9 +83,10 @@ jobs:
           cd modules/ecr
           echo "BASE_REPO_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com" >> $GITHUB_OUTPUT
           terraform fmt -check
-          terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${{inputs.stage}}/${AWS_BUCKET_KEY_NAME}" -backend-config="region=${AWS_REGION}"
+          terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${{inputs.stage}}/ecr/${AWS_BUCKET_KEY_NAME}" -backend-config="region=${AWS_REGION}"
           terraform plan \
-            -var="repository_name=downsize_media_${{ inputs.stage }}" \
+            -var="stage=${{inputs.stage}}" \
+            -var="region=${{secrets.AWS_REGION}}" \
             -var="lambda_function_name_downsize_media=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
             -var="lambda_function_name_extract_audio=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
             -var="lambda_function_name_merge_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
@@ -90,7 +95,8 @@ jobs:
             -no-color
 
           terraform apply \
-            -var="repository_name=downsize_media_${{ inputs.stage }}" \
+            -var="stage=${{inputs.stage}}" \
+            -var="region=${{secrets.AWS_REGION}}" \
             -var="lambda_function_name_downsize_media=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
             -var="lambda_function_name_extract_audio=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
             -var="lambda_function_name_merge_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
@@ -128,7 +134,7 @@ jobs:
           for function_name in "${!function_images[@]}"; do
               cd $function_name
               repo_name="${function_images[$function_name]}"
-              if git diff --quiet HEAD^ HEAD -- requirement.txt *.py; then
+              if git diff --quiet HEAD^4 HEAD -- requirement.txt *.py; then
                 echo "No changes, skipping lambda"
               else
                 docker build -t "$repo_name" -f "Dockerfile" .
@@ -152,8 +158,15 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -var="stage=${{ inputs.stage }}" -no-color
-        if: github.event_name == 'pull_request'
+        run: |
+          terraform plan \
+          -var="stage=${{ inputs.stage }}" \
+          -var="lambda_image_downsize_media=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
+          -var="lambda_image_extract_audio=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
+          -var="lambda_image_merge_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
+          -var="lambda_image_proccess_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
+          -var="lambda_image_split_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}" \
+          -no-color
         continue-on-error: true
 
       - uses: actions/github-script@v6
@@ -203,11 +216,11 @@ jobs:
           ecr_repo_base_uri=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}
           terraform apply \
           -var="stage=${{ inputs.stage }}" \
-          -var="lambda_image_downsize_media=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}:latest" \
-          -var="lambda_image_extract_audio=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}:latest" \
-          -var="lambda_image_merge_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}:latest" \
-          -var="lambda_image_proccess_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}:latest" \
-          -var="lambda_image_split_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}:latest" \
+          -var="lambda_image_downsize_media=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
+          -var="lambda_image_extract_audio=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
+          -var="lambda_image_merge_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
+          -var="lambda_image_proccess_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
+          -var="lambda_image_split_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}" \
           -auto-approve -input=false
 
       - name: Terraform Apply on Prod
@@ -216,9 +229,9 @@ jobs:
           ecr_repo_base_uri=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}
           terraform apply \
           -var="stage=${{ inputs.stage }}" \
-          -var="lambda_image_downsize_media=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}:latest" \
-          -var="lambda_image_extract_audio=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}:latest" \
-          -var="lambda_image_merge_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}:latest" \
-          -var="lambda_image_proccess_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}:latest" \
-          -var="lambda_image_split_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}:latest" \
+          -var="lambda_image_downsize_media=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
+          -var="lambda_image_extract_audio=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
+          -var="lambda_image_merge_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
+          -var="lambda_image_proccess_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
+          -var="lambda_image_split_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}" \
           -auto-approve -input=false
