Introduce downsize_media

--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -60,19 +60,16 @@ jobs:
           function_name_extract_audio=$(jq -r '.lambda.function_name_extract_audio' config.json)
           function_name_merge_frames=$(jq -r '.lambda.function_name_merge_frames' config.json)
           function_name_proccess_frames=$(jq -r '.lambda.function_name_proccess_frames' config.json)
-          function_name_split_frames=$(jq -r '.lambda.function_name_split_frames' config.json)
 
           echo "FUNCTION_NAME_DOWNSIZE_MEDIA=${function_name_downsize_media}" >> $GITHUB_OUTPUT
           echo "FUNCTION_NAME_EXTRACT_AUDIO=${function_name_extract_audio}" >> $GITHUB_OUTPUT
           echo "FUNCTION_NAME_MERGE_FRAMES=${function_name_merge_frames}" >> $GITHUB_OUTPUT
           echo "FUNCTION_NAME_PROCCESS_FRAMES=${function_name_proccess_frames}" >> $GITHUB_OUTPUT
-          echo "FUNCTION_NAME_SPLIT_FRAMES=${function_name_split_frames}" >> $GITHUB_OUTPUT
 
           echo "LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA=${function_name_downsize_media}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
           echo "LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO=${function_name_extract_audio}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
           echo "LAMBDA_FUNCTION_NAME_MERGE_FRAMES=${function_name_merge_frames}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
           echo "LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES=${function_name_proccess_frames}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
-          echo "LAMBDA_FUNCTION_NAME_SPLIT_FRAMES=${function_name_split_frames}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
 
       - name: Deploy ECR
         id: deploy-ecr
@@ -91,7 +88,6 @@ jobs:
             -var="lambda_function_name_extract_audio=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
             -var="lambda_function_name_merge_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
             -var="lambda_function_name_proccess_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
-            -var="lambda_function_name_split_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}" \
             -no-color
 
           terraform apply \
@@ -101,7 +97,6 @@ jobs:
             -var="lambda_function_name_extract_audio=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
             -var="lambda_function_name_merge_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
             -var="lambda_function_name_proccess_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
-            -var="lambda_function_name_split_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}" \
             -auto-approve -input=false
 
       - name: Get ECR Repository URIs
@@ -112,7 +107,6 @@ jobs:
           echo "IMAGE_REPO_EXTRACT_AUDIO=$(terraform output -raw ecr_repo_extract_audio_url):latest" >> $GITHUB_ENV
           echo "IMAGE_REPO_MERGE_FRAMES=$(terraform output -raw ecr_repo_merge_frames_url):latest" >> $GITHUB_ENV
           echo "IMAGE_REPO_PROCCESS_FRAMES=$(terraform output -raw ecr_repo_proccess_frames_url):latest" >> $GITHUB_ENV
-          echo "IMAGE_REPO_SPLIT_FRAMES=$(terraform output -raw ecr_repo_split_frames_url):latest" >> $GITHUB_ENV
 
       - name: Docker Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
@@ -127,20 +121,19 @@ jobs:
               ["${{ steps.parse-config.outputs.FUNCTION_NAME_EXTRACT_AUDIO }}"]="${{ env.IMAGE_REPO_EXTRACT_AUDIO }}"
               ["${{ steps.parse-config.outputs.FUNCTION_NAME_MERGE_FRAMES }}"]="${{ env.IMAGE_REPO_MERGE_FRAMES }}"
               ["${{ steps.parse-config.outputs.FUNCTION_NAME_PROCCESS_FRAMES }}"]="${{ env.IMAGE_REPO_PROCCESS_FRAMES }}"
-              ["${{ steps.parse-config.outputs.FUNCTION_NAME_SPLIT_FRAMES }}"]="${{ env.IMAGE_REPO_SPLIT_FRAMES }}"
           )
 
           cd lambdas
+          pwd
+          ls -l
           for function_name in "${!function_images[@]}"; do
-              cd $function_name
               repo_name="${function_images[$function_name]}"
-              if git diff --quiet HEAD^ HEAD -- requirement.txt *.py; then
+              if git diff --quiet HEAD^ HEAD -- $function_name/requirement.txt $function_name/*.py *.py; then
                 echo "No changes, skipping lambda"
               else
-                docker build -t "$repo_name" -f "Dockerfile" .
+                docker build -t "$repo_name" -f "$function_name/Dockerfile" .
                 docker push "$repo_name"
               fi
-              cd ..
           done
 
       - name: Terraform fmt
@@ -165,7 +158,6 @@ jobs:
           -var="lambda_image_extract_audio=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
           -var="lambda_image_merge_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
           -var="lambda_image_proccess_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
-          -var="lambda_image_split_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}" \
           -no-color
         continue-on-error: true
 
@@ -220,7 +212,6 @@ jobs:
           -var="lambda_image_extract_audio=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
           -var="lambda_image_merge_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
           -var="lambda_image_proccess_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
-          -var="lambda_image_split_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}" \
           -auto-approve -input=false
 
       - name: Terraform Apply on Prod
@@ -233,5 +224,4 @@ jobs:
           -var="lambda_image_extract_audio=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
           -var="lambda_image_merge_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
           -var="lambda_image_proccess_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
-          -var="lambda_image_split_frames=${{steps.deploy-ecr.outputs.BASE_REPO_URI}}/${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_SPLIT_FRAMES }}" \
           -auto-approve -input=false
