--- a/config.json
+++ b/config.json
@@ -3,8 +3,7 @@
     "function_name_downsize_media": "downsize_media",
     "function_name_extract_audio": "extract_audio",
     "function_name_merge_frames": "merge_frames",
-    "function_name_proccess_frames": "proccess_frames",
-    "function_name_split_frames": "split_frames"
+    "function_name_proccess_frames": "proccess_frames"
   }
 }
 
