--- a/lambdas/proccess_frames/Dockerfile
+++ b/lambdas/proccess_frames/Dockerfile
@@ -2,8 +2,8 @@
 FROM public.ecr.aws/lambda/python:3.12
 
 # Copy requirements and function code
-COPY requirements.txt ./
-COPY lambda_function.py ./
+COPY proccess_frames/requirements.txt ./
+COPY proccess_frames/lambda_function.py ./
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
