Add logging to lambda bucket

--- a/lambdas/merge_frames/Dockerfile
+++ b/lambdas/merge_frames/Dockerfile
@@ -1,12 +1,9 @@
-# lambda/downsize_media/Dockerfile
 FROM public.ecr.aws/lambda/python:3.12
 
-# Copy requirements and function code
-COPY merge_frames/requirements.txt ./
-COPY merge_frames/lambda_function.py ./
+COPY merge_frames/requirements.txt .
+RUN pip install --no-cache-dir -r ./requirements.txt
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+COPY *.py ./lambdas/
+COPY merge_frames/*.py ./lambdas/merge_frames/.
 
-# Command to run the Lambda function
-CMD ["lambda_function.lambda_handler"]
+CMD ["lambdas.merge_frames.lambda_function.lambda_handler"]
