--- a/lambdas/proccess_frames/Dockerfile
+++ b/lambdas/proccess_frames/Dockerfile
@@ -1,12 +1,12 @@
 FROM public.ecr.aws/lambda/python:3.12
 
-COPY proccess_frames/requirements.txt .
+COPY process_frames/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY *.py ./lambdas/
 
-COPY proccess_frames/consolas.ttf .
-COPY proccess_frames/lambda_function.py ./lambdas/proccess_frames/lambda_function.py
-COPY proccess_frames/modules ./lambdas/proccess_frames/modules
+COPY process_frames/consolas.ttf .
+COPY process_frames/lambda_function.py ./lambdas/process_frames/lambda_function.py
+COPY process_frames/modules ./lambdas/process_frames/modules
 
-CMD ["lambdas.proccess_frames.lambda_function.lambda_handler"]
+CMD ["lambdas.process_frames.lambda_function.lambda_handler"]
