--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -34,15 +34,15 @@ jobs:
       IMAGE_REPO_DOWNSIZE_MEDIA: ${{steps.get-ecr-repository.outputs.IMAGE_REPO_DOWNSIZE_MEDIA}}
       IMAGE_REPO_EXTRACT_AUDIO: ${{steps.get-ecr-repository.outputs.IMAGE_REPO_EXTRACT_AUDIO}}
       IMAGE_REPO_MERGE_FRAMES: ${{steps.get-ecr-repository.outputs.IMAGE_REPO_MERGE_FRAMES}}
-      IMAGE_REPO_PROCCESS_FRAMES: ${{steps.get-ecr-repository.outputs.IMAGE_REPO_PROCCESS_FRAMES}}
+      IMAGE_REPO_PROCESS_FRAMES: ${{steps.get-ecr-repository.outputs.IMAGE_REPO_PROCESS_FRAMES}}
       FUNCTION_NAME_DOWNSIZE_MEDIA: ${{steps.parse-config.outputs.FUNCTION_NAME_DOWNSIZE_MEDIA}}
       FUNCTION_NAME_EXTRACT_AUDIO: ${{steps.parse-config.outputs.FUNCTION_NAME_EXTRACT_AUDIO}}
       FUNCTION_NAME_MERGE_FRAMES: ${{steps.parse-config.outputs.FUNCTION_NAME_MERGE_FRAMES}}
-      FUNCTION_NAME_PROCCESS_FRAMES: ${{steps.parse-config.outputs.FUNCTION_NAME_PROCCESS_FRAMES}}
+      FUNCTION_NAME_PROCESS_FRAMES: ${{steps.parse-config.outputs.FUNCTION_NAME_PROCESS_FRAMES}}
       LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA: ${{steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA}}
       LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO: ${{steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO}}
       LAMBDA_FUNCTION_NAME_MERGE_FRAMES: ${{steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES}}
-      LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES: ${{steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES}}
+      LAMBDA_FUNCTION_NAME_PROCESS_FRAMES: ${{steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCESS_FRAMES}}
       BASE_REPO_URI: ${{steps.deploy-ecr.outputs.BASE_REPO_URI}}
     defaults:
       run:
@@ -74,17 +74,17 @@ jobs:
           function_name_downsize_media=$(jq -r '.lambda.function_name_downsize_media' config.json)
           function_name_extract_audio=$(jq -r '.lambda.function_name_extract_audio' config.json)
           function_name_merge_frames=$(jq -r '.lambda.function_name_merge_frames' config.json)
-          function_name_proccess_frames=$(jq -r '.lambda.function_name_proccess_frames' config.json)
+          function_name_process_frames=$(jq -r '.lambda.function_name_process_frames' config.json)
 
           echo "FUNCTION_NAME_DOWNSIZE_MEDIA=${function_name_downsize_media}" >> $GITHUB_OUTPUT
           echo "FUNCTION_NAME_EXTRACT_AUDIO=${function_name_extract_audio}" >> $GITHUB_OUTPUT
           echo "FUNCTION_NAME_MERGE_FRAMES=${function_name_merge_frames}" >> $GITHUB_OUTPUT
-          echo "FUNCTION_NAME_PROCCESS_FRAMES=${function_name_proccess_frames}" >> $GITHUB_OUTPUT
+          echo "FUNCTION_NAME_PROCESS_FRAMES=${function_name_process_frames}" >> $GITHUB_OUTPUT
 
           echo "LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA=${function_name_downsize_media}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
           echo "LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO=${function_name_extract_audio}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
           echo "LAMBDA_FUNCTION_NAME_MERGE_FRAMES=${function_name_merge_frames}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
-          echo "LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES=${function_name_proccess_frames}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
+          echo "LAMBDA_FUNCTION_NAME_PROCESS_FRAMES=${function_name_process_frames}-${{ inputs.stage }}" >> $GITHUB_OUTPUT
 
       - name: Deploy ECR
         id: deploy-ecr
@@ -102,7 +102,7 @@ jobs:
             -var="lambda_function_name_downsize_media=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
             -var="lambda_function_name_extract_audio=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
             -var="lambda_function_name_merge_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
-            -var="lambda_function_name_proccess_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
+            -var="lambda_function_name_process_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCESS_FRAMES }}" \
             -no-color
 
           terraform apply \
@@ -111,7 +111,7 @@ jobs:
             -var="lambda_function_name_downsize_media=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
             -var="lambda_function_name_extract_audio=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
             -var="lambda_function_name_merge_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
-            -var="lambda_function_name_proccess_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
+            -var="lambda_function_name_process_frames=${{ steps.parse-config.outputs.LAMBDA_FUNCTION_NAME_PROCESS_FRAMES }}" \
             -auto-approve -input=false
 
       - name: Get ECR Repository URIs
@@ -122,7 +122,7 @@ jobs:
           echo "IMAGE_REPO_DOWNSIZE_MEDIA=$(terraform output -raw ecr_repo_downsize_media_url):latest" >> $GITHUB_OUTPUT
           echo "IMAGE_REPO_EXTRACT_AUDIO=$(terraform output -raw ecr_repo_extract_audio_url):latest" >> $GITHUB_OUTPUT
           echo "IMAGE_REPO_MERGE_FRAMES=$(terraform output -raw ecr_repo_merge_frames_url):latest" >> $GITHUB_OUTPUT
-          echo "IMAGE_REPO_PROCCESS_FRAMES=$(terraform output -raw ecr_repo_proccess_frames_url):latest" >> $GITHUB_OUTPUT
+          echo "IMAGE_REPO_PROCESS_FRAMES=$(terraform output -raw ecr_repo_process_frames_url):latest" >> $GITHUB_OUTPUT
 
       - name: Set base repo uri
         id: set_base_repo_uri
@@ -160,14 +160,14 @@ jobs:
           key: image_repo_merge_frames
           value: ${{steps.get-ecr-repository.outputs.IMAGE_REPO_MERGE_FRAMES}}
 
-      - name: Set image repo proccess frames
-        id: set_image_repo_proccess_frames
+      - name: Set image repo process frames
+        id: set_image_repo_process_frames
         uses: noobly314/share-data@v1
         with:
-          share-id: image_repo_proccess_frames
+          share-id: image_repo_process_frames
           mode: set
-          key: image_repo_proccess_frames
-          value: ${{steps.get-ecr-repository.outputs.IMAGE_REPO_PROCCESS_FRAMES}}
+          key: image_repo_process_frames
+          value: ${{steps.get-ecr-repository.outputs.IMAGE_REPO_PROCESS_FRAMES}}
 
   build_and_push_docker:
     name: Build and push Docker Images
@@ -221,13 +221,13 @@ jobs:
           mode: get
           key: image_repo_merge_frames
 
-      - name: Get image repo proccess frames
-        id: get_image_repo_proccess_frames
+      - name: Get image repo process frames
+        id: get_image_repo_process_frames
         uses: noobly314/share-data@v1
         with:
-          share-id: image_repo_proccess_frames
+          share-id: image_repo_process_frames
           mode: get
-          key: image_repo_proccess_frames
+          key: image_repo_process_frames
 
       - name: Build and Push Docker Images
         run: |
@@ -238,7 +238,7 @@ jobs:
               ["${{ needs.deploy_ecr.outputs.FUNCTION_NAME_DOWNSIZE_MEDIA }}"]="${{ steps.get_image_repo_downsize_media.outputs.data }}"
               ["${{ needs.deploy_ecr.outputs.FUNCTION_NAME_EXTRACT_AUDIO }}"]="${{ steps.get_image_repo_extract_audio.outputs.data }}"
               ["${{ needs.deploy_ecr.outputs.FUNCTION_NAME_MERGE_FRAMES }}"]="${{ steps.get_image_repo_merge_frames.outputs.data }}"
-              ["${{ needs.deploy_ecr.outputs.FUNCTION_NAME_PROCCESS_FRAMES }}"]="${{ steps.get_image_repo_proccess_frames.outputs.data }}"
+              ["${{ needs.deploy_ecr.outputs.FUNCTION_NAME_PROCESS_FRAMES }}"]="${{ steps.get_image_repo_process_frames.outputs.data }}"
           )
 
           cd lambdas
@@ -304,13 +304,13 @@ jobs:
           mode: get
           key: image_repo_merge_frames
 
-      - name: Get image repo proccess frames
-        id: get_image_repo_proccess_frames
+      - name: Get image repo process frames
+        id: get_image_repo_process_frames
         uses: noobly314/share-data@v1
         with:
-          share-id: image_repo_proccess_frames
+          share-id: image_repo_process_frames
           mode: get
-          key: image_repo_proccess_frames
+          key: image_repo_process_frames
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -339,7 +339,7 @@ jobs:
           -var="lambda_image_downsize_media=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
           -var="lambda_image_extract_audio=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
           -var="lambda_image_merge_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
-          -var="lambda_image_proccess_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
+          -var="lambda_image_process_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_PROCESS_FRAMES }}" \
           -no-color
         continue-on-error: true
 
@@ -393,7 +393,7 @@ jobs:
           -var="lambda_image_downsize_media=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
           -var="lambda_image_extract_audio=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
           -var="lambda_image_merge_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
-          -var="lambda_image_proccess_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
+          -var="lambda_image_process_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_PROCESS_FRAMES }}" \
           -auto-approve -input=false
 
       - name: Terraform Apply on Prod
@@ -405,5 +405,5 @@ jobs:
           -var="lambda_image_downsize_media=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_DOWNSIZE_MEDIA }}" \
           -var="lambda_image_extract_audio=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_EXTRACT_AUDIO }}" \
           -var="lambda_image_merge_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_MERGE_FRAMES }}" \
-          -var="lambda_image_proccess_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_PROCCESS_FRAMES }}" \
+          -var="lambda_image_process_frames=${{steps.get_base_repo_uri.outputs.data}}/${{ needs.deploy_ecr.outputs.LAMBDA_FUNCTION_NAME_PROCESS_FRAMES }}" \
           -auto-approve -input=false
